cvs/ports/shells/bash/patches/patch-configure,v
head	1.5;
access;
symbols
	OPENBSD_6_2:1.5.0.2
	OPENBSD_6_2_BASE:1.5
	OPENBSD_4_5:1.3.0.10
	OPENBSD_4_5_BASE:1.3
	OPENBSD_4_4:1.3.0.8
	OPENBSD_4_4_BASE:1.3
	OPENBSD_4_3:1.3.0.6
	OPENBSD_4_3_BASE:1.3
	OPENBSD_4_2:1.3.0.4
	OPENBSD_4_2_BASE:1.3
	OPENBSD_4_1:1.3.0.2
	OPENBSD_4_1_BASE:1.3
	OPENBSD_4_0:1.2.0.4
	OPENBSD_4_0_BASE:1.2
	OPENBSD_3_9:1.2.0.2
	OPENBSD_3_9_BASE:1.2
	OPENBSD_3_8:1.1.0.4
	OPENBSD_3_8_BASE:1.1
	OPENBSD_3_7:1.1.0.2
	OPENBSD_3_7_BASE:1.1;
locks; strict;
comment	@# @;


1.5
date	2017.09.25.09.16.13;	author robert;	state Exp;
branches;
next	1.4;
commitid	xOeDnABBxynvFYIF;

1.4
date	2009.04.04.19.42.18;	author naddy;	state dead;
branches;
next	1.3;

1.3
date	2006.10.14.18.03.10;	author naddy;	state Exp;
branches;
next	1.2;

1.2
date	2005.12.12.20.20.31;	author naddy;	state Exp;
branches;
next	1.1;

1.1
date	2005.02.09.23.11.29;	author alek;	state Exp;
branches;
next	;


desc
@@


1.5
log
@Unbreak autoconf checks with clang by not using nested functions
in the checks.

Someone clearly did not read the autoconf documentation because
using the following functions with a function declaration inside
the body will end up declaring a function inside a function.

- AC_TRY_COMPILE( [], [ int main() { return 0; } ],
- AC_LANG_PROGRAM([[]], [[int main (void) { return 0; }]])],
- AC_TRY_LINK([], [int main (void) { return 0; }],

Result:

int
main ()
{
int main (void) { return 0; }
  ;
  return 0;
}

nested functions is a gcc extension which is not supported by
clang.

test.c:4:17: error: function definition is not allowed here
int main (void) { return 0; }
                ^
1 error generated.

This causes tests to fail in the configure scripts resulting in
missing compile and link time flags from the builds.

This resulted in weird behaviour of several software, like gnome
hanging completely due to gtk+3 not being built properly.

This change intrudces the following fixes:

- remove int main() declaration from AC_TRY_COMPILE, AC_LANG_PROGRAM, AC_TRY_LINK
  as it comes with a declaration already, and people misused them

- change to use AC_LANG_SOURCE when needed in case a complete source block is specified

Most of the changes are in configure.(ac|in), however there were some cases
where autoconf is either broken or the build failed because of an autoconf
generated configure script. Everytihng else is switched to autoconf, so
the maintainers can go ahead and upstream these diffs.

There are more to come, we are continously checking the tree for these issues
and in the future the infrastructure will error if such a case is found.
@
text
@$OpenBSD$

Index: configure
--- configure.orig
+++ configure
@@@@ -10265,8 +10265,7 @@@@ else
 int
 main ()
 {
-int main() { long double r; char *foo, bar; r = strtold(foo, &bar);}
-  ;
+  long double r; char *foo, bar; r = strtold(foo, &bar);
   return 0;
 }
 _ACEOF
@


1.4
log
@major update to 4.0, patch level 10
@
text
@d1 15
a15 21
$OpenBSD: patch-configure,v 1.3 2006/10/14 18:03:10 naddy Exp $
--- configure.orig	Tue Sep 26 17:06:01 2006
+++ configure	Sat Oct 14 17:33:16 2006
@@@@ -28144,7 +28144,7 @@@@ s,@@XGETTEXT@@,$XGETTEXT,;t t
 s,@@MSGMERGE@@,$MSGMERGE,;t t
 s,@@ALLOCA@@,$ALLOCA,;t t
 s,@@GLIBC21@@,$GLIBC21,;t t
-s,@@LIBICONV@@,$LIBICONV,;t t
+s,@@LIBICONV@@,$LTLIBICONV,;t t
 s,@@LTLIBICONV@@,$LTLIBICONV,;t t
 s,@@INTLBISON@@,$INTLBISON,;t t
 s,@@BUILD_INCLUDED_LIBINTL@@,$BUILD_INCLUDED_LIBINTL,;t t
@@@@ -28156,7 +28156,7 @@@@ s,@@GENCAT@@,$GENCAT,;t t
 s,@@INTLOBJS@@,$INTLOBJS,;t t
 s,@@INTL_LIBTOOL_SUFFIX_PREFIX@@,$INTL_LIBTOOL_SUFFIX_PREFIX,;t t
 s,@@INTLLIBS@@,$INTLLIBS,;t t
-s,@@LIBINTL@@,$LIBINTL,;t t
+s,@@LIBINTL@@,$LTLIBINTL,;t t
 s,@@LTLIBINTL@@,$LTLIBINTL,;t t
 s,@@POSUB@@,$POSUB,;t t
 s,@@LIBOBJS@@,$LIBOBJS,;t t
@


1.3
log
@update to 3.2: miscellaneous bug fixes
@
text
@d1 1
a1 1
$OpenBSD: patch-configure,v 1.2 2005/12/12 20:20:31 naddy Exp $
@


1.2
log
@Update to new release 3.1.
Too many changes to summarize, many bug fixes.

Remove static FLAVOR.
@
text
@d1 4
a4 4
$OpenBSD$
--- configure.orig	Sat Dec 10 21:11:23 2005
+++ configure	Sat Dec 10 21:15:34 2005
@@@@ -24001,7 +24001,7 @@@@ s,@@XGETTEXT@@,$XGETTEXT,;t t
d13 1
a13 1
@@@@ -24013,7 +24013,7 @@@@ s,@@GENCAT@@,$GENCAT,;t t
@


1.1
log
@- Fix libintl/libiconv linking
- Bump PKGNAME

ok naddy@@
@
text
@d2 3
a4 3
--- configure.orig	Tue Feb  8 23:40:43 2005
+++ configure	Tue Feb  8 23:41:10 2005
@@@@ -24742,7 +24742,7 @@@@ s,@@XGETTEXT@@,$XGETTEXT,;t t
d13 1
a13 1
@@@@ -24754,7 +24754,7 @@@@ s,@@GENCAT@@,$GENCAT,;t t
@

